--- a/noteApp-front/src/app/note-list/note-list.component.html
+++ b/noteApp-front/src/app/note-list/note-list.component.html
@@ -21,10 +21,10 @@
     </form>
   </mat-card>
 
-  <mat-card *ngFor="let note of noteList" class="note">
+  <mat-card *ngFor="let note of noteList" class="note" [ngClass]="note.status === 'done' ? 'note-done' : ''">
     <mat-card-header>
       <mat-card-title>{{note.title}}</mat-card-title>
-      <mat-card-subtitle>{{note.createdAt}}</mat-card-subtitle>
+      <mat-card-subtitle>{{note.updatedAt | date: 'EEEE d MMMM y h:mm a'}}</mat-card-subtitle>
     </mat-card-header>
 
     <mat-card-content>
@@ -32,6 +32,12 @@
        {{note.content}}
       </p>
     </mat-card-content>
+
+    <mat-card-actions>
+      <button mat-button (click)="updateStatus(note)">{{note.status === 'new' ? 'DONE' : 'TO DO'}}</button>
+      <button mat-button>Edit</button>
+      <button mat-button (click)="deleteNote(note)">Delete</button>
+    </mat-card-actions>
 
   </mat-card>
 </div>
