edit and delete note

--- a/noteApp-front/src/app/note-list/note-list.component.css
+++ b/noteApp-front/src/app/note-list/note-list.component.css
@@ -1,5 +1,5 @@
 .noteList{
-  width: 800px;
+  max-width: 800px;
   background-color: #f1e7e6;
   margin: 0 auto;
 }
@@ -11,31 +11,9 @@
   text-align: center;
   color: red;
 }
-.note{
-  margin: 10px 0;
-}
 
-.note-done {
-  text-decoration-line: line-through;
-}
-
-.addNote{
-  margin: 20px 0px 50px;
-}
-
-.example-container {
+.filter {
   display: flex;
-  flex-direction: column;
-}
-
-.example-container > mat-form-field {
-  width: 75%;
-  margin: 0 auto;
-}
-
-.example-container > button {
-  /*width: 100%;*/
-  width: 150px;
-  background-color: #e8c4b6;
-  margin: 0 auto;
+  justify-content: space-evenly;
+  padding: 20px 0;
 }
