--- a/noteApp-front/src/app/note-list/note-list.component.html
+++ b/noteApp-front/src/app/note-list/note-list.component.html
@@ -1,43 +1,19 @@
 <div class="noteList">
   <h1>My notes</h1>
-
-
-  <mat-card class="addNote">
-
     <div *ngIf="error" class="error">
       <h4>{{error}}</h4>
     </div>
+  <app-note-form [noteModel]="noteModel" (note)="addNote($event)"></app-note-form>
 
-    <form (ngSubmit)="addNote()" [formGroup]="addNoteForm" class="example-container">
-      <mat-form-field>
-        <input matInput placeholder="Title" formControlName="title">
-      </mat-form-field>
+  <div *ngIf="noteList?.length" class="filter">
+    <button mat-stroked-button (click)="setCategory('all')">All</button>
+    <button mat-stroked-button (click)="setCategory('new')">To do</button>
+    <button mat-stroked-button (click)="setCategory('done')">Done</button>
+  </div>
 
-      <mat-form-field>
-        <textarea  matInput placeholder="Note" formControlName="content"></textarea>
-      </mat-form-field>
-
-      <button mat-raised-button>Add new note</button>
-    </form>
-  </mat-card>
-
-  <mat-card *ngFor="let note of noteList" class="note" [ngClass]="note.status === 'done' ? 'note-done' : ''">
-    <mat-card-header>
-      <mat-card-title>{{note.title}}</mat-card-title>
-      <mat-card-subtitle>{{note.updatedAt | date: 'EEEE d MMMM y h:mm a'}}</mat-card-subtitle>
-    </mat-card-header>
-
-    <mat-card-content>
-      <p>
-       {{note.content}}
-      </p>
-    </mat-card-content>
-
-    <mat-card-actions>
-      <button mat-button (click)="updateStatus(note)">{{note.status === 'new' ? 'DONE' : 'TO DO'}}</button>
-      <button mat-button>Edit</button>
-      <button mat-button (click)="deleteNote(note)">Delete</button>
-    </mat-card-actions>
-
-  </mat-card>
+  <app-single-note (delete)="deleteNote($event)"
+                   (edit)="updateNote($event, $event.status)"
+                   (status)="updateStatus($event)"
+                   *ngFor="let note of noteList | category: category"
+                   [note]="note"></app-single-note>
 </div>
